<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/Home"
        android:visible="true"
        android:icon="@drawable/home_icon">
    </item>
    <item
        android:id="@+id/search"
        android:title="@string/Search"
        android:visible="true"
        android:icon="@drawable/search">
    </item>
    <item
        android:id="@+id/share"
        android:title="@string/Share"
        android:visible="true"
        android:icon="@drawable/share">
    </item>
    <item
        android:id="@+id/categories"
        android:title="@string/Categories"
        android:visible="true"
        android:icon="@drawable/categories">
    </item>
    <item
        android:id="@+id/account"
        android:title="@string/Account"
        android:visible="true"
        android:icon="@drawable/user_icon">
    </item>

</menu>